# cmake-boilerplate

./: .gitignore  CMakeLists.txt  README  build.sh
src/: CMakeLists.txt  foo.cpp  foo.h  main.cpp
